[gd_scene load_steps=13 format=2]

[ext_resource path="res://game_objects/entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player.png" type="Texture" id=2]
[ext_resource path="res://assets/Gun.png" type="Texture" id=3]
[ext_resource path="res://ui_theme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 27 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 6.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 61
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="DebugDisplayVelocity" type="Label" parent="."]
margin_left = -20.0
margin_top = -48.0
margin_right = 20.0
margin_bottom = -34.0
theme = ExtResource( 4 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "idle"
playing = true

[node name="GunSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
offset = Vector2( 80, 0 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SurviveTickTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
[connection signal="timeout" from="SurviveTickTimer" to="." method="_on_SurviveTickTimer_timeout"]
